# simple_biped_gaits_tutorial

./: CMakeLists.txt  package.xml
config/: gait_jaxon.yaml  rviz_config_jaxon
include/simple_biped_gaits_tutorial/: biped_controller_core.hpp  biped_controller_interface.hpp
launch/: display.launch  simple_biped_gaits.launch
src/: biped_controller_core.cpp  biped_controller_interface.cpp  simple_biped_gaits_node.cpp
