<?xml version="1.0"?>
<package format="2">
  <name>simple_biped_gaits_tutorial</name>
  <version>0.0.0</version>
  <description>Standalone tutorial that plans a simple biped walking gait for JAXON</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">sugihara</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>crocoddyl</depend>
  <depend>pinocchio</depend>
  <depend>eigen</depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <exec_depend>cart_humanoid</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
